# ai-research-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ai-research-assistant_requirements.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: README.md
docs/: model_card.md  prompt_design.md  resume_entry.md  system_design.md
docs/superpowers/plans/: 2026-06-18-ai-research-assistant-mvp.md
docs/superpowers/specs/: 2026-06-18-ai-research-assistant-mvp-design.md
reports/: demo_queries.md  evaluation_report.md  product_review.md  real_paper_evaluation.json  real_paper_evaluation.md  system_limitations.md
scripts/: run_real_paper_evaluation.py
src/: __init__.py  arxiv_search.py  chunking.py  config.py  demo_data.py  embeddings.py  evaluation.py  llm_client.py  models.py  paper_compare.py  paper_ingestion.py  pdf_loader.py  product_metrics.py  prompts.py  rag_pipeline.py  real_paper_evaluation.py  summarizer.py  text_cleaning.py  vector_store.py
tests/: test_arxiv_search.py  test_chunking.py  test_config.py  test_demo_data.py  test_evaluation.py  test_llm_client.py  test_paper_ingestion.py  test_pdf_loader.py  test_product_metrics.py  test_project_packaging.py  test_rag_pipeline.py  test_real_paper_evaluation.py  test_retrieval.py  test_scripts.py  test_streamlit_app.py
